# 5560assignment3

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
app/: gan_api_utils.py  main.py  rnn_textgen.py
app/routers/: embeddings.py
fastapi-embeddings/: Dockerfile  README.md  pyproject.toml
fastapi-embeddings/app/: main.py  nlp.py
helper_lib/: __init__.py  data_loader.py  model.py  trainer.py
sps_genai/: pyproject.toml
sps_genai/app/: bigram_model.py  main.py
